--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,5 @@
 @import url('navbar.css');
+@import url('load.css');
 body{
     background: #0E153A;
     margin:0;
@@ -6,4 +7,20 @@ body{
 
 .montserrat{
     font-family: 'Montserrat';
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3D5AF1; 
+  border-radius: 0px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #E2F3F5; 
 }
