--- a/css/load.css
+++ b/css/load.css
@@ -1,56 +1,56 @@
-.spinner-wrapper{
-    background: #0E153A;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.spinner-wrapper {
+  background: #0e153a;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.spinner{
-    z-index: 101;
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background: linear-gradient(45deg, transparent, transparent 40%, #3D5AF1);
-    animation: animate 0.2s linear infinite;
+.spinner {
+  z-index: 101;
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: linear-gradient(45deg, transparent, transparent 40%, #3d5af1);
+  animation: animate 0.2s linear infinite;
 }
 
 @keyframes animate {
-    0%{
-        transform: rotate(0deg);
-        filter: hue-rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-        filter: hue-rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+    filter: hue-rotate(0deg);
+  }
 }
 
-.spinner:before{
-    content: '';
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    right: 6px;
-    bottom: 6px;
-    background: #0E153A;
-    border-radius: 50%;
-    z-index: 102;
+.spinner:before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  background: #0e153a;
+  border-radius: 50%;
+  z-index: 102;
 }
 
-.spinner:after{
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    background: linear-gradient(45deg, transparent, transparent 40%, #3D5AF1);
-    border-radius: 50%;
-    z-index: 1;
-    filter: blur(30px);
+.spinner:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background: linear-gradient(45deg, transparent, transparent 40%, #3d5af1);
+  border-radius: 50%;
+  z-index: 1;
+  filter: blur(30px);
 }
