--- a/css/show_vol.css
+++ b/css/show_vol.css
@@ -1,8 +1,8 @@
-@import url('search.css');
-@import url('cards.css');
+@import url("search.css");
+@import url("cards.css");
 
-.cards-board{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.cards-board {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
