--- a/css/cards.css
+++ b/css/cards.css
@@ -1,9 +1,8 @@
 .card-container{
-    display: inline-block;
     margin: 20px;   
     border-radius: 10px;
     background: white;
-    box-shadow:  10px 10px 10px black
+    box-shadow:  10px 10px 10px black;
 }
 
 /* Delete */
@@ -92,6 +91,7 @@
     background: #3D5AF1;
     border-radius: 0 0 10px 10px;
     padding: 5px;
+    position:relative;
 }
 
 .card-container-footer > span{
