--- a/css/addform.css
+++ b/css/addform.css
@@ -1,89 +1,120 @@
-@media (min-width:1274px) {
-    .add_form_container{
-        margin-top: 20vh;
-        margin-left: 30%;
-        margin-right: 30%;
-    }
+@media (min-width: 1274px) {
+  .add_form_container {
+    margin-top: 20vh;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
 }
 
-@media (max-width:1274px) {
-    .add_form_container{
-        margin-top: 15vh;
-        margin-left: 30%;
-        margin-right: 30%;
-    }
+@media (max-width: 1274px) {
+  .add_form_container {
+    margin-top: 15vh;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
 }
 
 @media (max-width: 1104px) {
-    .add_form_container{
-        margin-top: 15vh;
-        margin-left: 25%;
-        margin-right: 25%;
-    }
+  .add_form_container {
+    margin-top: 15vh;
+    margin-left: 25%;
+    margin-right: 25%;
+  }
 }
 
 @media (max-width: 909px) {
-    .add_form_container{
-        margin-top: 10vh;
-        margin-left: 20%;
-        margin-right: 20%;
-    }
+  .add_form_container {
+    margin-top: 10vh;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
 }
 
 @media (max-width: 665px) {
-    .add_form_container{
-        margin-top: 3vh;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
+  .add_form_container {
+    margin-top: 3vh;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
 
 @media (max-width: 438px) {
-    .add_form_container{
-        margin-top: 0vh;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
+  .add_form_container {
+    margin-top: 0vh;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
 }
 
-.add_form_container{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.add_form_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.add_form_container>*{
-    margin: 10px;
-    padding: 10px;
-    border-radius: 4px;
-    border: none;
-    outline: none;
-    text-align: center;
-    font-family: "Montserrat";
-    font-size: 50px;
-    font-size: 30px;
+.add_form_container * {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 50px;
+  font-size: 30px;
 }
 
-.add_form_container>input:focus::placeholder{
-    color: rgba(0, 0, 0, 0);
+.add_form_container input {
+  background: #3d5af1;
+  color: #e2f3f5;
 }
 
-.add_form_container>input{
-    background: #3D5AF1;
-    color: #E2F3F5;
+.add_form_container input::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, 0);
 }
 
-.add_form_container>input::placeholder{
-    color: #E2F3F5;
+.add_form_container input:-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0);
 }
 
-.add_form_container>button{
-    margin-top: 40px;
-    background: #E2F3F5;
-    color: #3D5AF1;
+.add_form_container input::-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0);
 }
 
-.add_form_container>button:hover{
-    cursor: pointer;
+.add_form_container input::placeholder {
+  color: rgba(0, 0, 0, 0);
 }
+
+.add_form_container input::-webkit-input-placeholder {
+  color: #e2f3f5;
+}
+
+.add_form_container input:-ms-input-placeholder {
+  color: #e2f3f5;
+}
+
+.add_form_container input::-ms-input-placeholder {
+  color: #e2f3f5;
+}
+
+.add_form_container input::placeholder {
+  color: #e2f3f5;
+}
+
+.add_form_container button {
+  margin-top: 40px;
+  background: #e2f3f5;
+  color: #3d5af1;
+}
+
+.add_form_container button:hover {
+  cursor: pointer;
+}
+/*# sourceMappingURL=addform.css.map */
