--- a/css/load.css
+++ b/css/load.css
@@ -4,9 +4,15 @@
   width: 100%;
   height: 100vh;
   z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .spinner {
@@ -16,17 +22,37 @@
   height: 150px;
   border-radius: 50%;
   background: linear-gradient(45deg, transparent, transparent 40%, #3d5af1);
-  animation: animate 0.2s linear infinite;
+  -webkit-animation: animate 0.2s linear infinite;
+          animation: animate 0.2s linear infinite;
+}
+
+@-webkit-keyframes animate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
+  }
 }
 
 @keyframes animate {
   0% {
-    transform: rotate(0deg);
-    filter: hue-rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
-    filter: hue-rotate(0deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
   }
 }
 
@@ -52,5 +78,7 @@
   background: linear-gradient(45deg, transparent, transparent 40%, #3d5af1);
   border-radius: 50%;
   z-index: 1;
-  filter: blur(30px);
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
 }
+/*# sourceMappingURL=load.css.map */
