--- a/css/search.scss
+++ b/css/search.scss
@@ -1,3 +1,9 @@
+$searchBackground: #e2f3f5;
+$searchPlaceholder: black;
+$dropdownBackground: #a0bbff;
+$itemBackground: #2c43b6;
+$itemForeground: white;
+
 .dropdown-container {
   z-index: 5;
 }
@@ -10,94 +16,65 @@
   outline: none;
   font-size: 30px;
   padding-left: 20px;
-}
-
-.search-search::-webkit-input-placeholder {
-  color: black;
-}
-
-.search-search:-ms-input-placeholder {
-  color: black;
-}
-
-.search-search::-ms-input-placeholder {
-  color: black;
-}
-
-.search-search::placeholder {
-  color: black;
+  &::placeholder {
+    color: $searchPlaceholder;
+  }
 }
 
 .search-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  background: #e2f3f5;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background: $searchBackground;
+  align-items: center;
   height: 60px;
-}
-
-.search-container:hover {
-  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .search-icon {
   margin-right: 10px;
-}
-
-.search-icon:hover {
-  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .searchby-icon {
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  transition: -webkit-transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
-.search-order-container:hover .searchby-icon {
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
+.search-order-container:hover {
+  .searchby-icon {
+    transform: rotate(-180deg);
+  }
 }
 
 @media (max-width: 1591px) {
   .search-order-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    background: #a0bbff;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    background: $dropdownBackground;
+    align-items: center;
     padding-right: 40px;
     height: 60px;
     width: 20%;
-  }
-  .search-order-container span {
-    font-family: "Montserrat";
-    font-size: 25px;
+    span {
+      font-family: "Montserrat";
+      font-size: 25px;
+    }
   }
 }
 
 @media (min-width: 1591px) {
   .search-order-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    background: #a0bbff;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    background: $dropdownBackground;
+    align-items: center;
     padding-right: 40px;
     height: 60px;
     width: 20%;
-  }
-  .search-order-container span {
-    font-family: "Montserrat";
-    font-size: 30px;
+    span {
+      font-family: "Montserrat";
+      font-size: 30px;
+    }
   }
 }
 
@@ -105,13 +82,14 @@
 /* Container */
 @media (min-width: 1591px) {
   .dropdown-container {
-    background: #a0bbff;
+    background: $dropdownBackground;
     right: 0;
     top: 129px;
     width: 20%;
     position: absolute;
     display: none;
   }
+
   /* Item */
   .dropdown-item {
     list-style-type: none;
@@ -119,23 +97,24 @@
     font-family: "Montserrat";
     font-size: 30px;
     padding-left: 10%;
-  }
-  .dropdown-item:hover {
-    cursor: pointer;
-    background: #2c43b6;
-    color: white;
+    &:hover {
+      cursor: pointer;
+      background: $itemBackground;
+      color: $itemForeground;
+    }
   }
 }
 
 @media (max-width: 1591px) {
   .dropdown-container {
-    background: #a0bbff;
+    background: $dropdownBackground;
     right: 0;
     top: 129px;
     width: 20%;
     position: absolute;
     display: none;
   }
+
   /* Item */
   .dropdown-item {
     list-style-type: none;
@@ -143,11 +122,11 @@
     font-family: "Montserrat";
     font-size: 25px;
     padding-left: 10%;
-  }
-  .dropdown-item:hover {
-    cursor: pointer;
-    background: #2c43b6;
-    color: white;
+    &:hover {
+      cursor: pointer;
+      background: $itemBackground;
+      color: $itemForeground;
+    }
   }
 }
 
@@ -159,13 +138,14 @@
 
 @media (max-width: 1105px) {
   .dropdown-container {
-    background: #a0bbff;
+    background: $dropdownBackground;
     right: 0;
     top: 198px;
     width: 20%;
     position: absolute;
     display: none;
   }
+
   /* Item */
   .dropdown-item {
     list-style-type: none;
@@ -173,23 +153,24 @@
     font-family: "Montserrat";
     font-size: 25px;
     padding-left: 10%;
-  }
-  .dropdown-item:hover {
-    cursor: pointer;
-    background: #2c43b6;
-    color: white;
+    &:hover {
+      cursor: pointer;
+      background: $itemBackground;
+      color: $itemForeground;
+    }
   }
 }
 
 @media (max-width: 669px) {
   .dropdown-container {
-    background: #a0bbff;
+    background: $dropdownBackground;
     right: 0;
     top: 261px;
     width: 25%;
     position: absolute;
     display: none;
   }
+
   /* Item */
   .dropdown-item {
     list-style-type: none;
@@ -197,26 +178,28 @@
     font-family: "Montserrat";
     font-size: 25px;
     padding-left: 10%;
-  }
-  .dropdown-item:hover {
-    cursor: pointer;
-    background: #2c43b6;
-    color: white;
+    &:hover {
+      cursor: pointer;
+      background: $itemBackground;
+      color: $itemForeground;
+    }
   }
 }
 
 @media (max-width: 562px) {
   .dropdown-container {
-    background: #a0bbff;
+    background: $dropdownBackground;
     right: 0;
     top: 336px;
     width: 30%;
     position: absolute;
     display: none;
   }
+
   .searchby-text {
     display: none;
   }
+
   /* Item */
   .dropdown-item {
     list-style-type: none;
@@ -224,11 +207,11 @@
     font-family: "Montserrat";
     font-size: 25px;
     padding-left: 10%;
-  }
-  .dropdown-item:hover {
-    cursor: pointer;
-    background: #2c43b6;
-    color: white;
+    &:hover {
+      cursor: pointer;
+      background: $itemBackground;
+      color: $itemForeground;
+    }
   }
 }
 
@@ -263,4 +246,3 @@
   padding: 0;
   margin: 0;
 }
-/*# sourceMappingURL=search.css.map */
